<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="appDesc">My Nanodegree Apps!</string>
    <string name="button1Desc">spotify streamer</string>
    <string name="button2Desc">scores app</string>
    <string name="button3Desc">library app</string>
    <string name="button4Desc">build it bigger</string>
    <string name="button5Desc">xyz reader</string>
    <string name="button6Desc">capstone: my own app</string>
</resources>
