<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3F2FD"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/appDesc"
            android:textColor="#0D47A1"
            android:textSize="24sp"  />


        <Button
            android:id="@+id/spotifyStreamer"
            style="@style/MyStyledButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/button1Desc" />

        <Button
            android:id="@+id/scoresApp"
            style="@style/MyStyledButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/button2Desc" />

        <Button
            android:id="@+id/libraryApp"
            style="@style/MyStyledButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/button3Desc" />

        <Button
            android:id="@+id/buildItBigger"
            style="@style/MyStyledButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/button4Desc" />

        <Button
            android:id="@+id/xyxReader"
            style="@style/MyStyledButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/button5Desc" />

        <Button
            android:id="@+id/capstoneMyOwnApp"
            style="@style/MySpecialStyledButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/button6Desc"
            />
    </LinearLayout>

</ScrollView>